<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimaryDark"
    android:gravity="center"
    tools:context="com.example.eyad.ministryofinteriorproject.LoginActivity">

    <ImageView
        android:src="@drawable/ministry"
        android:id="@+id/splash"
        android:layout_width="250dp"
        android:layout_height="200dp"
        android:contentDescription="@string/slogo"
        />
    <TextView
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:text="@string/LogIn"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:textColor="@android:color/white"
        android:text="@string/slogo"
        android:textSize="15sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <android.support.v7.widget.CardView
        android:background="@color/colorPrimaryDark"
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:backgroundTint="@color/colorPrimaryDark"
        android:layout_height="wrap_content"
        app:cardElevation="30dp"
        app:cardCornerRadius="50dp">

        <LinearLayout
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:id="@+id/user_name"
                android:textColor="@color/colorAccent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/userName"
                android:backgroundTint="@color/colorPrimaryDark"
                android:textColorHint="@android:color/white"
                android:inputType="number"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@color/colorAccent"
                />

            <EditText
                android:id="@+id/user_pass"
                android:layout_marginTop="5dp"
                android:textColor="@color/colorAccent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/userPass"
                android:backgroundTint="@color/colorPrimaryDark"
                android:textColorHint="@android:color/white"
                android:inputType="number"
                android:layout_marginBottom="5dp"
                />

        </LinearLayout>


    </android.support.v7.widget.CardView>

    <info.hoang8f.widget.FButton
        android:id="@+id/btnLogin"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@android:color/white"
        android:text="@string/LogIn"
        android:textColor="#fff"
        android:textSize="@dimen/text_size_categories"
        app:cornerRadius="20dp"
        app:fButtonColor="@color/colorAccent"
        app:shadowColor="@android:color/black"
        app:shadowEnabled="true"
        app:shadowHeight="3dp" />


</LinearLayout>